# notrandom

./: Makefile  README.rst  README.txt  notrandom.py  pyproject.toml  randomrep.py  randrep.py  setup.py  test.py  tests_output.txt
.github/workflows/: ci.yaml
